# reverse

./: .gitignore  .travis.yml  README.md  obverse-versus-reverse.html  reverse.cabal  reverse.md
benchmarks/: ClockBenchmarks.hs  CriterionBenchmarks.hs
src/: Main.hs  Reverse.agda  Reverse.hs
src/Reverse/Data/: List.agda  List.hs
src/Reverse/System/: Clock.hs
tests/: DocTests.hs
