name:                reverse
version:             0.1.0
synopsis:            Obverse and Reverse
description:         Obverse and Reverse
license:             BSD3
license-file:        LICENSE
author:              Juan Pedro Villa Isaza
maintainer:          jpvillaisaza@gmail.com
-- copyright:
category:            Sd
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

bug-reports: https://github.com/jpvillaisaza/reverse/issues

source-repository head
  type:     git
  location: https://github.com/jpvillaisaza/reverse

library
  exposed-modules:     Reverse.Data.List
  build-depends:       base >=4.7 && <4.8
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable reverse
  build-depends: base, reverse, clock, formatting >= 6.1.0
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Reverse.hs

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  main-is:          DocTests.hs
  build-depends:
    base,
    doctest >= 0.8,
    QuickCheck
