name:               reverse
version:            0.2.0
synopsis:           Obverse and Reverse
description:        Obverse and Reverse.
author:             Juan Pedro Villa Isaza
maintainer:         jvilla@stackbuilders.com
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

bug-reports:        https://github.com/jpvillaisaza/reverse/issues

source-repository head
  type:             git
  location:         https://github.com/jpvillaisaza/reverse

library
  build-depends:    base >=4.7 && < 4.9
  default-language: Haskell2010
  exposed-modules:  Reverse
  ghc-options:      -Wall
  hs-source-dirs:   src

test-suite doctests
  build-depends:
    base,
    doctest >= 0.8,
    QuickCheck
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  main-is:          DocTests.hs
  type:             exitcode-stdio-1.0

benchmark clock-benchmarks
  build-depends:
    base,
    clock,
    formatting >= 6.1.0,
    QuickCheck,
    reverse,
    time
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   benchmarks
  main-is:          ClockBenchmarks.hs
  type:             exitcode-stdio-1.0

benchmark criterion-benchmarks
  build-depends:    base, criterion, QuickCheck, reverse
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   benchmarks
  main-is:          CriterionBenchmarks.hs
  type:             exitcode-stdio-1.0
